[package]
name = "rusty-valkey-forward-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
fred = { version = "10.1", features = ["i-scripts"] }
confique = { version = "0.4", features = ["toml"] }
anyhow = "1.0"
time = { version = "0.3", features = ["formatting"] }
axum = { version = "0.8", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
rand = { version = "0.9", default-features = false, features = ["std", "os_rng"] }
tracing = "0.1"
blake3 = "1.5"
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
http = "1.1"
base64 = "0.22"

[dev-dependencies]
serial_test = "3.2"
